deploy/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    mutate.example.com/config: "mutate-nginx"
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
