deploy/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mutator

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutator
webhooks:
- name: mutator.example.com
  clientConfig:
    service:
      name: mutator
      namespace: mutator
      path: "/mutate"
#    caBundle: "ZHVtbXk="
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
  objectSelector:
    matchExpressions:
    - {key: "mutate.example.com/enable", operator: "Exists"}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mutator
  name: mutator
  namespace: mutator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutator
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mutator
    spec:
      serviceAccountName: mutator
      containers:
      - name: mutator
        image: docker.io/yaamai/mutator:latest
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs"
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: mutator-cert
          optional: true

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mutator
  name: mutator
  namespace: mutator
spec:
  ports:
  - name: webhook
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: mutator
  type: ClusterIP
